# MDM

./: .dockerignore  .gitignore  .xdp-.$Структура БД.drawio.bkp-XPqtfe  .xdp-.$Структура БД.drawio.bkp-hIpgyI  .xdp-.$Структура БД.drawio.dtmp-OnFLHR  README.md  db.sqlite3  docker-compose.yaml  pyproject.toml  Структура БД.drawio
core/: .example.env  asgi.py  config.py  settings.py  urls.py  wsgi.py
core/mixin/: __init__.py  created_at.py  created_by.py  id.py  updated_at.py  updated_by.py
core/models/: __init__.py  base.py
db_init/: 01-create-schema.sql
dynamic_tables_app/: apps.py  managers.py  models.py  services.py  urls.py  views.py
dynamic_tables_app/forms/: __init__.py  record_form.py
dynamic_tables_app/migrations/: 0001_initial.py  0002_dynamictableschema_schema_name.py  0003_category_product_and_more.py
dynamic_tables_app/views/: __init__.py  dyn_model_list_view.py  dyn_model_record_create_view.py  dyn_model_record_delete_view.py  dyn_model_record_update_view.py  dyn_model_record_view.py  views.py
meta_app/: admin.py  apps.py  services.py  urls.py
meta_app/forms/: __init__.py  object_column_form.py  object_form.py
meta_app/migrations/: 0001_create_schema.py  0001_create_schema_meta.py  0001_initial.py  0002_alter_object_object_name.py  0002_initial.py  0003_add_params.py  0003_alter_attr_created_by_alter_attr_updated_by_and_more.py  0003_alter_dicattr_created_by_and_more.py  0003_alter_objectcolumn_dictionary_objectregistratration.py  0004_alter_attr_created_by_alter_attr_updated_by_and_more.py  (+4 more)
user_app/: admin.py  apps.py  urls.py
(+97 files in other folders)
