[project]
name = "mdm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.0",
    "django-dto==0.1.4",
    "django-mptt>=0.18.0",
    "django-sequences>=3.0",
    "psycopg[binary,c]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]
